Revise README for JavaFX application details
Updated application description and project structure in README.md. Enhanced feature descriptions for Doctor and Patient roles.